# stash

./: .gitignore  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_01_30_1043-f773bac176c0_initial_models.py  2025_01_30_2146-4c90cbaaee7d_link_read.py  2025_01_31_0939-e0b3146f8655_user_table.py  2025_03_01_1228-18e694518611_adding_link_categories_and_other_ai_data.py  2025_03_20_1003-a31c7e62435c_user_newsletter_enabled.py  2025_04_01_0956-ef4cdd57d5e1_user_timestamps.py  2025_04_05_1104-af3591657f3d_link_summary_field.py
backend/stash/: config.py  db.py  main.py  models.py  router.py  schemas.py
backend/stash/core/: lib.py  security.py
backend/stash/models/: categories.py  links.py  users.py
backend/stash/router/: admin.py  categories.py  links.py  users.py
backend/stash/schemas/: category.py  links.py  newsletter.py  response_models.py  security.py  users.py
backend/stash/schemas/templates/: weekly-digest.html
backend/stash/services/: __init__.py  ai.py  email.py  links.py  newsletter.py
backend/stash/tests/: test_link_service.py
firefox/: .gitignore  README.md  background.js  manifest.json  popup.html  popup.js
frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
frontend/src/: app.html
frontend/src/lib/: Header.svelte  types.ts
frontend/src/lib/server/: api.ts  auth.ts
frontend/src/routes/: +page.server.ts  +page.svelte
frontend/src/routes/docs/: +page.svelte
(+10 files in other folders)
